force-app/main/default/objects/Management_Personnel__c/Management_Personnel__c.object-meta.xml
<CustomObject>
    <label>Management Personnel</label>
    <nameField>
        <label>Last Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Management Personnel</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>