force-app/main/default/objects/Management_Personnel__c/fields/EEO_Detail__c.field-meta.xml
<CustomField>
    <fullName>EEO_Detail__c</fullName>
    <label>EEO Detail</label>
    <referenceTo>EEO_Detail__c</referenceTo>
    <relationshipLabel>Management Personnel</relationshipLabel>
    <relationshipName>Management_Personnel</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>