force-app/main/default/objects/Management_Personnel__c/fields/Management_Personnel__c.field-meta.xml
<CustomField>
    <fullName>Management_Personnel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Management Personnel</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Management Personnel</relationshipLabel>
    <relationshipName>Management_Personnel</relationshipName>
    <type>Lookup</type>
</CustomField>