force-app/main/default/objects/Management_Personnel__c/fields/Personnel_Number__c.field-meta.xml
<CustomField>
    <fullName>Personnel_Number__c</fullName>
    <displayFormat>PN-{000000}</displayFormat>
    <label>Personnel Number</label>
    <type>AutoNumber</type>
</CustomField>